# matpy

./: .gitignore  LICENSE  README.md  flat_mmul.c  hello.c  matmul_variants.h  matpy.c  matrix.c  matrix.h  matrix.py  measure.py  pyproject.toml  tags  test.py
